--- a/ConiferApp/Views/Produccion/Details.cshtml
+++ b/ConiferApp/Views/Produccion/Details.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
 
 <div>
-    <h4>ProduccionDetalle</h4>
+    <h4>Producción detalle</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -86,6 +85,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "ControlarProduccion")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.id }) |
+    @Html.ActionLink("Volver", "ControlarProduccion")
 </p>
