--- a/ConiferApp/Views/Produccion/Edit.cshtml
+++ b/ConiferApp/Views/Produccion/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 
 @using (Html.BeginForm())
@@ -15,7 +15,7 @@
 
 
     <div class="form-horizontal">
-        <h4>ProduccionDetalle</h4>
+        <h4>Producción detalle</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
@@ -102,7 +102,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "ControlarProduccion")
+    @Html.ActionLink("Volver", "ControlarProduccion")
 </div>
 
 @section Scripts {
