se agregan cambios esteticos

--- a/ConiferApp/Views/Produccion/Details.cshtml
+++ b/ConiferApp/Views/Produccion/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.idproduccion)
+            Nro. producción
         </dt>
 
         <dd>
@@ -19,67 +19,59 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.fecha)
+            Fecha
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.fecha)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.linea)
-        </dt>
+        <th>
+            línea
+        </th>
 
         <dd>
             @Html.DisplayFor(model => model.linea)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.coche)
-        </dt>
+        <th>
+            Coche
+        </th>
 
         <dd>
             @Html.DisplayFor(model => model.coche)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.legajo)
-        </dt>
+        <th>
+            Legajo
+        </th>
 
         <dd>
             @Html.DisplayFor(model => model.legajo)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.horainicio)
-        </dt>
+        <th>
+            Hora inicio
+        </th>
 
         <dd>
             @Html.DisplayFor(model => model.horainicio)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.horafin)
-        </dt>
+        <th>
+            Hora fin
+        </th>
 
         <dd>
             @Html.DisplayFor(model => model.horafin)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.controladora)
-        </dt>
+        <th>
+            Controladora
+        </th>
 
         <dd>
             @Html.DisplayFor(model => model.controladora)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.vueltas)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.vueltas)
         </dd>
 
     </dl>
