--- a/ConiferApp/Views/Produccion/Details.cshtml
+++ b/ConiferApp/Views/Produccion/Details.cshtml
@@ -26,49 +26,49 @@
             @Html.DisplayFor(model => model.fecha)
         </dd>
 
-        <th>
-            línea
-        </th>
+        <dt>
+            Línea
+        </dt>
 
         <dd>
             @Html.DisplayFor(model => model.linea)
         </dd>
 
-        <th>
+        <dt>
             Coche
-        </th>
+        </dt>
 
         <dd>
             @Html.DisplayFor(model => model.coche)
         </dd>
 
-        <th>
+        <dt>
             Legajo
-        </th>
+        </dt>
 
         <dd>
             @Html.DisplayFor(model => model.legajo)
         </dd>
 
-        <th>
+        <dt>
             Hora inicio
-        </th>
+        </dt>
 
         <dd>
             @Html.DisplayFor(model => model.horainicio)
         </dd>
 
-        <th>
+        <dt>
             Hora fin
-        </th>
+        </dt>
 
         <dd>
             @Html.DisplayFor(model => model.horafin)
         </dd>
 
-        <th>
+        <dt>
             Controladora
-        </th>
+        </dt>
 
         <dd>
             @Html.DisplayFor(model => model.controladora)
