--- a/ConiferApp/Views/Produccion/Edit.cshtml
+++ b/ConiferApp/Views/Produccion/Edit.cshtml
@@ -37,7 +37,7 @@
         </div>
 
         <div class="form-group">
-            @Html.Label("línea", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Línea", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.linea, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.linea, "", new { @class = "text-danger" })
