Cambios de Diego del reporte

--- a/ConiferApp/Views/Consolidado/Inicio.cshtml
+++ b/ConiferApp/Views/Consolidado/Inicio.cshtml
@@ -10,8 +10,8 @@
 
     <div class="col-md-6">
         <p><a href="@Url.Action("CargarArchivoConsolidado", "Consolidado")">Cargar archivo consolidado</a></p>
-        <p><a href="@Url.Action("ControlarProduccion2", "ControlarProduccion2")">Controlar producción</a></p>
-        <p><a href="@Url.Action("ControlarProduccion", "Produccion")">Consultar producción</a></p>
+        <p><a href="@Url.Action("ControlarProduccion", "Produccion")">Controlar Produccion</a></p>
+        <p><a href="@Url.Action("ControlarProduccion2", "ControlarProduccion2")">Controlar Produccion2</a></p>
     </div>
 
     <div class="col-md-6">
