--- a/ConiferApp/Views/Home/Informes.cshtml
+++ b/ConiferApp/Views/Home/Informes.cshtml
@@ -9,10 +9,10 @@
 <br />
 <div class="col-md-6">
     <br />
-    <p><a href="@Url.Action("Index", "CantidadTarifasXlineas")">Cantidad de tarifas por línea</a></p>
-    <p><a href="">Reporte 2</a></p>
-    <p><a href="">Reporte 3</a></p>
-    <p><a href="">Reporte 4</a></p>
+    <p><a href="@Url.Action("BoletosPendientes","Reportes")">Boletos pendientes</a></p>
+    <p><a href="@Url.Action("CantidadTarifasXlinea","Reportes")">Cantidad de tarifas por línea</a></p>
+    <p><a href="@Url.Action("TotalesXCorredor","Reportes")">Totales por corredor</a></p>
+    <p><a href="@Url.Action("TotalesXTarifa","Reportes")">Totales por tipo de tarifa</a></p>
 </div>
 <br />
 <a href="@Url.Action("Index", "Home")">Volver a inicio</a>
