--- a/ConiferApp/Views/Produccion/ControlarProduccion.cshtml
+++ b/ConiferApp/Views/Produccion/ControlarProduccion.cshtml
@@ -9,7 +9,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h4 class="text-center">Consultar producción</h4>
+<h4 class="text-center">Listado de producción</h4>
 
 <div class="container">
     <div class="row justify-content-center">
@@ -17,29 +17,26 @@
             <form asp-action="ControlarProduccion" method="get">
                 <div class="form-group">
                     <div class="row">
+                        buscar por:
                         <div>
-                            Buscar por:
                             <select class="form-control" name="TipoBusqueda" id="TipoBusqueda">
-                                <option selected>Seleccione criterio</option>
+                                <option selected>Seleccione Criterio</option>
                                 <option value="Legajo">Legajo</option>
                                 <option value="Coche">Coche</option>
-                                <option value="Linea">Línea</option>
+                                <option value="Linea">Linea</option>
                                 <option value="Fecha">Fecha</option>
                                 <option value="Controladora">Controladora</option>
                             </select>
-                            <div>
-                                <label for="TipoBusqueda">Ingrese </label>
-                                <span id="criterioSeleccionado"></span>
-                            </div>
-                            <input type="text" name="cadenaBusqueda" value="@ViewData["CurrentFilter"]" />
-                            <input type="submit" value="Buscar" class="btn btn-sm btn-success" />
+                            <div>Formato Fecha: dd/mm/aaaa</div>
+                            <input type="text" name="cadenaBusqueda" value="@ViewData["CurrentFilter"]"/>
                         </div>
+                        <input type="submit" value="Buscar" class="btn btn-sm btn-success" /> 
                     </div>
                 </div>
             </form>
-
-
-
+                
+            
+            
         </div>
     </div>
 </div>
@@ -49,31 +46,37 @@
     <thead>
         <tr>
             <th>
-                Nro. producción
+                ID
+            </th>
+            <th>
+                Id Producción
             </th>
             <th>
                 Fecha
             </th>
             <th>
-                @Html.ActionLink("Línea", "ControlarProduccion", new { Ordenamiento = ViewBag.OrdenLinea })
+                @Html.ActionLink("Linea", "ControlarProduccion", new { Ordenamiento = ViewBag.OrdenLinea })
             </th>
             <th>
-                @Html.ActionLink("Coche", "ControlarProduccion", new { Ordenamiento = ViewBag.OrdenCoche })
+                @Html.ActionLink("Coche", "ControlarProduccion", new { Ordenamiento = ViewBag.OrdenCoche }) 
             </th>
             <th>
                 Legajo
             </th>
             <th>
-                Hora inicio
+                Hora Inicio
             </th>
             <th>
-                Hora fin
+                Hora Fin
             </th>
             <th>
                 Controladora
             </th>
             <th>
-                
+                Vueltas
+            </th>
+            <th>
+                Acciones
             </th>
         </tr>
     </thead>
@@ -81,6 +84,9 @@
         @foreach (var item in Model)
         {
             <tr>
+                <td>
+                    @Html.DisplayFor(modelitem => item.id)
+                </td>
                 <td>
                     @item.idproduccion
                 </td>
@@ -106,6 +112,9 @@
                     @item.controladora
                 </td>
                 <td>
+                    @item.vueltas
+                </td>
+                <td>
                     <a class="btn btn-sm btn-secondary" @Html.ActionLink("Detalles", "Details", new { id = item.id })></a>
                 </td>
             </tr>
@@ -118,25 +127,12 @@
 <br />
 
 <div>
-    Página @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) de @Model.PageCount  -  Elementos totales: @Model.TotalItemCount
+    Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount  -  Elementos totales: @Model.TotalItemCount
 
     @Html.PagedListPager(Model, page => Url.Action("ControlarProduccion",
-            new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+        new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
 </div>
 
-<script>
-    // Agrega un controlador de evento para el cambio en el select
-    document.getElementById("TipoBusqueda").addEventListener("change", function() {
-        var select = document.getElementById("TipoBusqueda");
-        var criterioSeleccionado = document.getElementById("criterioSeleccionado");
-
-        // Obtén el valor seleccionado
-        var seleccion = select.options[select.selectedIndex].text;
-
-        // Actualiza el contenido del span
-        criterioSeleccionado.textContent = seleccion;
-    });
-</script>
 
 
 
