--- a/ConiferApp/Views/Reportes/BoletosPendientes.cshtml
+++ b/ConiferApp/Views/Reportes/BoletosPendientes.cshtml
@@ -1,11 +1,11 @@
 ﻿@using System.Data
 @model DataTable
 @{
-    ViewBag.Title = "CantidadTarifasXlinea";
+    ViewBag.Title = "BoletosPendientes";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <br />
-<h2>Cantidad tarifas  por fecha y línea</h2>
+<h2>Reporte de boletos pendientes</h2>
 <br />
 <form method="post" enctype="multipart/form-data">
     <div>
@@ -22,14 +22,23 @@
                 <br />
             </div>
             <div class="col-md-3">
-                <label for="linea">Línea:</label>
-                <input name="linea" type="number" placeholder="64" required />
+                <label for="estadoSeleccionado">Estado:</label>
+                <select name="estadoSeleccionado" required>
+                    <option value="">Seleccione opción</option>
+                    <option value="0">Pendientes sin saldar</option>
+                    <option value="1">Pendientes saldados</option>
+                </select>
             </div>
             <div class="col-md-3">
                 <br />
                 <input type="submit" id="Buscar" name="Buscar" value="Buscar" class="btn btn-outline-success" />
             </div>
         </div>
+        @*<div class="row">
+            <div class="col-md-4">
+                <input type="reset" value="Limpiar filtros" class="btn btn-outline-warning" />
+            </div>
+        </div>*@
         <br />
 
         @if (ViewData["Resultado"] != null)
@@ -40,10 +49,19 @@
                         Fecha
                     </th>
                     <th>
-                        Tipo de tarifa
+                        Legajo
                     </th>
                     <th>
-                        Cantidad
+                        Coche
+                    </th>
+                    <th>
+                        Línea
+                    </th>
+                    <th>
+                        Cantidad adeudada
+                    </th>
+                    <th>
+                        Cantidad saldada
                     </th>
                 </tr>
                 @foreach (DataRow item in Model.Rows)
@@ -53,10 +71,19 @@
                             @Convert.ToString(item["fecha"])
                         </td>
                         <td>
-                            @Convert.ToString(item["Nombre"])
+                            @Convert.ToString(item["legajo"])
                         </td>
                         <td>
-                            @Convert.ToString(item["cantidad"])
+                            @Convert.ToString(item["coche"])
+                        </td>
+                        <td>
+                            @Convert.ToString(item["linea"])
+                        </td>
+                        <td>
+                            @Convert.ToString(item["cantidad_adeudada"])
+                        </td>
+                        <td>
+                            @Convert.ToString(item["cantidad_devueltos"])
                         </td>
                     </tr>
                 }
@@ -70,10 +97,14 @@
                     @ViewData["Mensaje"]
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
-            </div>
+            </div>           
         }
 
     </div>
     <br />
-    <a class="btn btn-outline-dark" href="@Url.Action("Informes", "Home")">Volver a reportes</a>  |  <a class="btn btn-outline-dark" href="@Url.Action("ImprimirCantidadTarifasXlinea", "Reportes")">Imprimir</a>
+    <a class="btn btn-outline-dark" href="@Url.Action("Informes", "Home")">Volver a reportes</a>  |  <a class="btn btn-outline-dark" href="@Url.Action("ImprimirBoletosPendientes", "Reportes")">Imprimir</a>
 </form>
+
+    
+
+
